tools/crates/vendor/zerocopy/tests/ui-msrv/try_transmute_ref-size-decrease.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-msrv/try_transmute_ref-size-decrease.rs:19:42
   |
19 |     let _decrease_size: Result<&u8, _> = try_transmute_ref!(&AU16(0));
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `AU16` (16 bits)
   = note: target type: `u8` (8 bits)
   = note: this error originates in the macro `$crate::assert_size_eq` (in Nightly builds, run with -Z macro-backtrace for more info)
